src/css/common.css
.sticky-table {
  border-collapse: separate;
  border-spacing: 0;
}

.sticky-left-cell {
  position: sticky;
  left: 0;
  background-color: white !important;
  z-index: 2;
}

.inline-cell {
  white-space: nowrap;
}

.group-wrap {
  flex-wrap: wrap;
}

